스프링 토비 추가 정리 및 이미지 수정

--- a/spring-toby/mds/ch11.md
+++ b/spring-toby/mds/ch11.md
@@ -58,3 +58,46 @@
 - Jpa는 기본적으로 빈으로 등록된 DataSource를 사용할 수 있으므로 JDBC, iBatis를 추가로 사용할 수 있다.
     - **이게 아까 위해서 DataSource를 빈으로 등록해줘야 하는 이유다.**
 
+### 트랜잭션 특징
+#### 트랜잭션 전파 속
+- 트랜잰셕 전파란 트랜잭션의 경계에서 이미 진행중인 트랜잭션이 있거나 혹은 없을 때 어떻게 동작할지 결정하는 방식을 의미한다.
+
+**PROPAGATION_REQUIRED**
+- 가장 많이 사용하는 전파속성으로 진행 중인 트랜잭션이 있으면 해당 트랜잭션에 참여하고 없다면 트랜잭션을 새로 만든다.
+- DefaultTransactionDefinition의 전파속성이 PROPAGATION_REQUIRED를 갖는다.
+
+**PROPAGATION_REQUIRES_NEW**
+- 항상 새로운 트랜잭션을 시작한다.
+
+**PROPAGATION_NOT_SUPPORTED**
+- 트랜잭션을 사용하지 않으며 진행중인 트랜잭션이 있다면 무시한다.
+- 보통 트랜잭션은 AOP를 통해 설정하는데 수많은 설정 중에 특정 트랜잭션만 없애기가 쉽지않으므로 이 전파속성을 통해 트랜잭션을 무시할 수 있다.
+
+**PROPAGATION_SUPPORTS**
+- 트랜잭션이 이미 있다면 그 트랜잭션을 사용하고 없다면 트랜잭션을 사용하지 않는다.
+
+**PROPAGATION_MANDATORY**
+- 트랜잭션이 이미 있다면 그 트랜잭션을 사용하고 없다면 예외를 발생시킨다.
+
+**PROPAGATION_NEVER**
+- 트랜잭션을 사용하지 않으며 진행중인 트랜잭션이 있다면 예외를 발생시킨다.
+
+**PROPAGATION_NESTED**
+- 트랜잭션을 중첩하고 늦게 생성된 자식 트랜잭션의 롤백은 영향을 주지않지만 부모 트랜잭션의 롤백은 자식에게 영향을 준다.
+- 로그같은걸 찍을 때 로그 작업이 실패하더라도 실제 로직처리를 롤백하면 안되지만 실제 로직 처리를 실패하면 로그 작업을 취소해야할 때 사용하면 좋다.
+
+#### 격리수준
+- DefaultTransactionDefinition에 설정된 격리수준은 Datasource의 기본설정에 따르는 ISOLACTION_DEFAULT이다.
+
+#### 제한시간
+- 트랜잭션을 수행하는 제한시간을 설정할 수 있다.
+- DefaultTransactionDefinition의 기본설정은 제한시간이 없는 것이다.
+- 트랜잭션을 직접 시작할 수 있는 PROPAGATION_REQUIRED, PROPAGATION_REQUIRES_NEW와 함께 사용해야만 의미가 있다.
+
+#### 읽기전용
+- 읽기전용으로 설정해두면 트랜잭션 내에서 데이터를 조작하는 시도를 막아줄 수 있다.
+- 또한 데이터 액세스 기술에 따라서 성능이 향상될 수도 있다.
+
+> - 트랜잭션 설정을 수정하고 싶다면 DefaultTransactionDefinition를 변경시키면된다. 하지만 이를 변경시키면 전체 트랜잭션 설정이 변경된다.
+> - 원하는 메서드만 선택해서 독자적인 트랜잭션 정의를 적용할 수 없을까?
+성
