--- a/spring-toby/mds/ch11.md
+++ b/spring-toby/mds/ch11.md
@@ -29,7 +29,7 @@
 ### EntityManagerFactory
 - JPA 영속성 컨텍스트에 접근하고 엔티티를 관리하기 위한 EntityManager 생성을 담당하는 Factory 인터페이스이다.
 - EntityManager는 여러 스레드에서 공통으로 사용될 수 없는 객체이므로 팩토리를 빈으로 등록하여 EntityManager를 DI받아 사용하게 된다.
-    - 이거 떄문에 옜날에는 @Autwried가 불가능했고 @PersistenceContext로만 DI가 가능했다. 하지만 지금은 가능해짐.
+    - 이거 때문에 옜날에는 @Autwried가 불가능했고 @PersistenceContext로만 DI가 가능했다. 하지만 지금은 가능해짐.
     - EntityManager는 프록시를 통해 참조되고 생명주기는 기본적으로 트랜잭션과 동일하다. 
 
 ### JPA의 LoadtimeWaver(로드타임 위버)
