--- a/object/mds/ch10.md
+++ b/object/mds/ch10.md
@@ -1,7 +1,7 @@
 # Chapter 10. 상속과 코드 재사용
 - 개발자가 재사용을 위해 상속을 이용하면 상속 계층 사이에 어떤 무수한 가정이 세워졌는지 알기 어려워 코드를 이해하기 어렵게 만든다.
 - 상속을 이용해 코드를 재사용하기 위해선 부모 클래스를 제작한 개발자가 세웠던 가정이나 추론을 정확히 파악해야 한다.
-    - 이런 특징떄문에 상속은 자동적으로 결합도를 높이게 되어있고, 높은 결합도는 변경을 어렵게 만든다.
+    - 이런 특징때문에 상속은 자동적으로 결합도를 높이게 되어있고, 높은 결합도는 변경을 어렵게 만든다.
 
 ### 상속을 위한 경고들..
 #### 경고 1)
