--- a/spring-toby/mds/ch14.md
+++ b/spring-toby/mds/ch14.md
@@ -21,7 +21,7 @@
 ### @Aspect 애노테이션으로 애스펙트를 생성하는 방법
 - @PointCut을 붙인 메서드를 정의하여 포인트컷을 지정할 수 있다.
     - @Pointcut은 void 리턴 타입 메서드로 정의하여야 한다.
-    - 조인 포인트는 어드바이스로 정의된 부가기능을 적용할 수 있는 위치로 프록시 기반 AOP의 경우 메서드만 가능하기 떄문에 보통 스프링에선 메서드만이 포인트컷이 될 수 있다.
+    - 조인 포인트는 어드바이스로 정의된 부가기능을 적용할 수 있는 위치로 프록시 기반 AOP의 경우 메서드만 가능하기 때문에 보통 스프링에선 메서드만이 포인트컷이 될 수 있다.
     
     
 - 어드바이스로 지정할 수 있는 애노테이션은 다음과 같다.
