--- a/kotlin-in-action/mds/ch10.md
+++ b/kotlin-in-action/mds/ch10.md
@@ -8,7 +8,8 @@
     - 다른 애노테이션을 인자로 지정할 때 @는 제외시켜야 한다.
     - 배열을 인자로 지정하기 위해선 arrayOf를 사용해야 한다.
         - 자바의 애노테이션 사용시 기본 value에 대해선 생략 가능
-    - 프로퍼티를 애노테이션 인자로 넣기 위해 const를 붙여줘야 한다.
+    - 어떤 프로퍼티를 애노테이션의 인자에 넣기 위해선 const를 붙여줘야 한다.
+        - 애노테이션의 인자는 컴파일 시점에 알 수 있어야 하기 때문에 상수로 취급되어야 한다.
     
    
 ```kotlin
@@ -47,7 +48,7 @@ fun main() {
     // 비확장 프로퍼티만
     kClass.memberProperties.forEach { println(it.name) }
 
-    // 모든 프로퍼티만
+    // 모든 프로퍼티
     // KCallable은 함수와 프로퍼티를 아우르는 상위 인터페이스로 call 메서드가 들어있고 call 메서드로 함수나 프로퍼티(getter)를 호출할 수 있다.
     val members: Collection<KCallable<*>> = kClass.members
     members.forEach { println(it.name) }
