--- a/kotlin-in-action/mds/ch11.md
+++ b/kotlin-in-action/mds/ch11.md
@@ -195,9 +195,9 @@ fun test2() {
 }
 ```
 
-### 원시 타입에 확장 함수 활용하여 날짜 처리를 간단히
+### 원시 타입에 확장 프로퍼티를 활용하여 날짜 처리를 간단히
 ```kotlin
-// 확장함수의 프로퍼티는 백킹필드를 가질 수 없으므로 getter로 만들어줘야 한다.
+// 확장 프로퍼티는 백킹필드를 가질 수 없으므로 getter로 직접 명시하여야 한다.
 val Int.days: Period get() = Period.ofDays(this)
 
 val Period.ago: LocalDateTime get() = LocalDateTime.now() - this
@@ -212,7 +212,7 @@ fun main() {
 
 ### SQL DSL 만들기
 ```kotlin
-// Table 내부에서 컬럼에 대한 기능을 확장하여 테이블에서만 사용할 수 있도록 한다.(이런걸 멤버 확장이라고 한다)
+// Table 내부에서 컬럼에 대한 기능을 확장하여 Table에서만 사용할 수 있도록 한다.(이런걸 멤버 확장이라고 한다)
 open class Table {
     fun integer(name: String) = Column<Int>()
     fun varchar(name: String, length: Int) = Column<String>()
@@ -240,4 +240,4 @@ fun main() {
 - 위의 경우 테이블에 새로운 타입을 추가하기 위해선 반드시 테이블이 수정되어야 한다.
 
 
-**코틀린은 다양한 기능으로 내부 DSL을 제공해줄 수 있으면서, 코틀린으로 DSL을 만들 때 가질 수 있는 강점은 정적 타입 언어이므로 내부 DSL을 만들어 사용할 때 문법 안전성을 보장해주며, 자동 완성까지 제공하는 것이다.**
+**코틀린은 다양한 기능으로 내부 DSL을 제공해줄 수 있으면서, 코틀린은 정적 타입 언어이므로 코틀린으로 내부 DSL을 만들면 자동 완성 및 문법 안정성을 보장받으면서 DSL를 사용할 수 있따.
